# amecs-solar-logger

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
src/: amecs_solar.rs  main.rs
