[package]
name = "amecs-solar-logger"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.22", features = ["derive", "env"] }
encoding_rs = "0.8.35"
futures = "0.3.31"
influxdb2 = "0.5.2"
itertools = "0.13.0"
ordered-float = "4.6.0"
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls"] }
scraper = "0.21.0"
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.9"
tokio = { version = "1.41.1", features = ["macros", "rt", "time"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.18"
